
CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(HELLO)

set (VER1 1)
set (VER2 2)


CONFIGURE_FILE(
    "${PROJECT_SOURCE_DIR}/config.h.in"
    "${PROJECT_BINARY_DIR}/config.h"
)

SET(USER_COMMON 1)

if (USER_COMMON)
    INCLUDE_DIRECTORIES ("${PROJECT_SOURCE_DIR}/common")
    ADD_SUBDIRECTORY (common)
    SET(EXTRA_LIBS ${EXTRA_LIBS} common)
endif (USER_COMMON)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(hello ${DIR_SRCS})

TARGET_LINK_LIBRARIES(hello ${EXTRA_LIBS})

install (TARGETS hello DESTINATION bin)
install (FILES ${PROJECT_BINARY_DIR}/config.h DESTINATION include)